main/default/objects/Location_Capture__c/Location_Capture__c.object-meta.xml
<CustomObject>
    <label>Location Capture</label>
    <nameField>
        <displayFormat>LC-{000000}</displayFormat>
        <label>Location Capture Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location Captures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>