main/default/objects/Location_Capture__c/fields/Bed__c.field-meta.xml
<CustomField>
    <fullName>Bed__c</fullName>
    <label>Bed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>