main/default/objects/Location_Capture__c/fields/BMS_Treating_Facility__c.field-meta.xml
<CustomField>
    <fullName>BMS_Treating_Facility__c</fullName>
    <label>BMS Treating Facility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>