main/default/objects/Location_Capture__c/fields/Building_Description__c.field-meta.xml
<CustomField>
    <fullName>Building_Description__c</fullName>
    <label>Building Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>