main/default/objects/Location_Capture__c/fields/Building_Display__c.field-meta.xml
<CustomField>
    <fullName>Building_Display__c</fullName>
    <label>Building Display</label>
    <length>255</length>
    <type>Text</type>
</CustomField>