main/default/objects/Location_Capture__c/fields/Capture_ID__c.field-meta.xml
<CustomField>
    <fullName>Capture_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Capture ID#</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Compass_Capture__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Organization Capture</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Compass_Capture__c</referenceTo>
    <relationshipLabel>Location Capture</relationshipLabel>
    <relationshipName>Location_Capture</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>