main/default/objects/Location_Capture__c/fields/Facility_Description__c.field-meta.xml
<CustomField>
    <fullName>Facility_Description__c</fullName>
    <label>Facility Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>