main/default/objects/Location_Capture__c/fields/Facility_Display__c.field-meta.xml
<CustomField>
    <fullName>Facility_Display__c</fullName>
    <label>Facility Display</label>
    <length>255</length>
    <type>Text</type>
</CustomField>