main/default/objects/Location_Capture__c/fields/Unit_Description__c.field-meta.xml
<CustomField>
    <fullName>Unit_Description__c</fullName>
    <label>Unit Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>