main/default/objects/Location_Capture__c/fields/Unit_Display__c.field-meta.xml
<CustomField>
    <fullName>Unit_Display__c</fullName>
    <label>Unit Display</label>
    <length>255</length>
    <type>Text</type>
</CustomField>